--- a/app/src/main/res/layout/activity_item_view.xml
+++ b/app/src/main/res/layout/activity_item_view.xml
@@ -32,43 +32,41 @@
     <ImageView
         android:id="@+id/item_image"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_title"
+        android:layout_height="350dp"
         android:layout_centerHorizontal="true"
         android:text=""
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_title" />
 
     <TextView
         android:id="@+id/item_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_image"
-        android:layout_centerHorizontal="true"
-        android:text=""
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/item_image" />
 
     <TextView
         android:id="@+id/item_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
+        android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_description"
-        android:layout_centerHorizontal="true"
-        android:text=""
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/item_description" />
 
     <Button
         android:id="@+id/bt_delete_item"
