--- a/app/src/main/res/layout/activity_collection_view.xml
+++ b/app/src/main/res/layout/activity_collection_view.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
+    <!-- APP BAR -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
-
         android:layout_width="match_parent"
         android:layout_height="192dp"
-        android:background="#FEFEFE">
+        android:background="#FEFEFE"
+        android:visibility="visible"
+        tools:visibility="visible" >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/violet"
+            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.Shadow"
+            app:collapsedTitleTextColor="@color/white"
+            app:expandedTitleTextColor="@color/white"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
-
             app:toolbarId="@+id/collectionToolbar">
 
             <ImageView
                 android:id="@+id/collection_app_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:contentDescription="@string/collection_appbar_image"
                 android:scaleType="centerCrop"
                 android:src="@android:drawable/sym_def_app_icon" />
@@ -35,6 +38,7 @@
                 android:id="@+id/collectionToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
                 app:titleTextAppearance="@style/TextAppearance.AppCompat.Large">
 
             </androidx.appcompat.widget.Toolbar>
@@ -43,51 +47,103 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/textToolbar"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="bottom"
+        android:layout_height="match_parent"
+        app:layout_anchor="@id/appbar"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:paddingRight="10dp">
 
-            <TextView
-                android:id="@+id/collection_view_location"
+            <!-- for informational text above entity list -->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/collection_view_description"
+                <TextView
+                    android:id="@+id/collection_view_description_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:text="Description"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/collection_view_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/white"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp"
+                    tools:text="Description" />
+
+                <TextView
+                    android:id="@+id/collection_view_location_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:text="Location"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textIsSelectable="false"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/collection_view_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="16sp"
+                    tools:text="Location" />
+
+                <TextView
+                    android:id="@+id/collection_view_noentitiesmsg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="No Collections or Items to Display"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
+
+            <!-- Entity List -->
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:textAlignment="center"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content" >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/collectionViewActivity_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+            </RelativeLayout>
+
         </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
-    </androidx.appcompat.widget.Toolbar>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/collectionViewActivity_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:paddingBottom="?attr/actionBarSize"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="bottom"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+    <!-- FABs -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -101,8 +157,7 @@
             android:src="@android:drawable/ic_input_add"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent" />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_collection_fab"
             android:layout_width="wrap_content"
@@ -113,8 +168,7 @@
             app:fabSize="normal"
             app:layout_constraintEnd_toEndOf="@+id/add_collection_item_fab"
             app:layout_constraintStart_toStartOf="@+id/add_collection_item_fab"
-            app:layout_constraintBottom_toTopOf="@+id/add_collection_item_fab"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/add_collection_item_fab" />
 
         <TextView
             android:id="@+id/add_collection_text"
@@ -137,8 +191,7 @@
             app:fabSize="normal"
             app:layout_constraintEnd_toEndOf="@+id/add_collection_item_fab"
             app:layout_constraintStart_toStartOf="@+id/add_collection_item_fab"
-            app:layout_constraintBottom_toTopOf="@+id/add_collection_fab"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/add_collection_fab" />
 
         <TextView
             android:id="@+id/add_item_text"
@@ -152,6 +205,5 @@
             app:layout_constraintTop_toTopOf="@+id/add_item_fab" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
