--- a/app/src/main/res/layout/collection_card.xml
+++ b/app/src/main/res/layout/collection_card.xml
@@ -18,8 +18,8 @@
 
         <ImageView
             android:id="@+id/card_field_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="600px"
+            android:layout_height="600px"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
             app:srcCompat="@android:drawable/ic_menu_gallery" />
@@ -29,12 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/card_field_image"
-            android:layout_marginTop="12dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
             android:text=""
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
 
         <TextView
             android:id="@+id/card_field_bottom"
@@ -47,18 +51,23 @@
             android:text=""
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="normal" />
+            android:textStyle="normal"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
 
         <TextView
             android:id="@+id/typeLabel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_below="@id/card_field_bottom"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="0dp"
             android:background="#808080"
             android:text=""
+            android:gravity="center"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="12sp"
