--- a/app/src/main/res/layout/activity_qr_scan.xml
+++ b/app/src/main/res/layout/activity_qr_scan.xml
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/white"
-        android:text="Reset Image"
+        android:text="Clear Image"
         android:textColor="#FF0000"
         app:layout_constraintEnd_toStartOf="@+id/space"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,9 +108,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@color/white"
-        android:text="Delete Image"
-        android:textColor="#FF0000"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:text="Remove Image"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/space"
         app:layout_constraintTop_toBottomOf="@+id/camera_button" />
